@@ -2,6 +2,7 @@
 v4.0.3-git
 ----------
 
+[jan] Update broken rows due to migration bug in PostgreSQL (Bug #12101).
 [mjr] Fix uncompleting tasks from task view in smartmobile view (Bug #12098, <ctimoteo@sapo.pt>).
 [jan] Include parent tasks in cost object labels.
 [jan] Only return completed tasks up to a week old as cost objects.
